--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.7'
 services:
   web:
     container_name: ${APP_NAME}
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     env_file: .env
     ports:
       - '${APP_PORT}:${APP_PORT}'
